# apiforge-lab

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-ai.txt  vite.config.js
.github/workflows/: deploy.yml
assistant/: __init__.py  config.py
assistant/agent/: __init__.py  graph.py  nodes.py  state.py
assistant/api/: __init__.py  app.py  schemas.py
assistant/cli/: __init__.py  chat.py  index.py  serve.py
assistant/eval/: __init__.py  run.py  testset.py
assistant/finetune/: __init__.py  dataset.py  feedback.py  train.py
assistant/llm/: __init__.py  base.py  factory.py  langchain_backend.py  stub.py
assistant/memory/: __init__.py  session.py
assistant/observability/: __init__.py  logging.py  tracing.py
assistant/prompts/: __init__.py  templates.py
assistant/rag/: __init__.py  chunker.py  embeddings.py  loader.py  retriever.py  store.py
assistant/tools/: __init__.py  codebase.py  registry.py
public/: 404.html
src/: App.jsx  index.css
src/components/: Footer.jsx  Navbar.jsx
src/components/chat/: ChatWidget.jsx
src/data/: apiPlaygroundData.js
src/hooks/: index.js  useClipboard.js
src/lib/: api.js
src/pages/: ApiPlayground.jsx  ApiReference.jsx  Architecture.jsx  Dashboard.jsx  DbSandbox.jsx  Documentation.jsx  Events.jsx  Landing.jsx  Workflows.jsx
tests/: test_apiforge_lab.py  test_assistant.py
