[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apiforge-assistant"
version = "1.0.0"
description = "AI Project Assistant for APIForge Lab — RAG + LangGraph agent + real-time chatbot."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "APIForge Lab" }]
dependencies = []  # core runs with zero external deps (offline fallbacks)

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "httpx>=0.27"]
rag = ["sentence-transformers>=2.6", "faiss-cpu>=1.8", "numpy>=1.26"]
orchestration = ["langchain>=0.2", "langchain-core>=0.2", "langgraph>=0.1"]
observability = ["langsmith>=0.1"]
eval = ["deepeval>=0.21"]
finetune = ["transformers>=4.40", "datasets>=2.19", "peft>=0.11", "accelerate>=0.30"]

[project.scripts]
apiforge-index = "assistant.cli.index:main"
apiforge-serve = "assistant.cli.serve:main"
apiforge-chat = "assistant.cli.chat:main"

[tool.setuptools.packages.find]
include = ["assistant*"]
